@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.1.1:
+  FIX: With "Title Streaming" disabled GStreamer could not play streams.
   FIX: Osssink is now the default sink for GStreamer. If sink initialization
        fails, a dialog will ask to select another sink.
   FIX: Pausing failed on some systems with GStreamer-engine. (BR 90417)
